switch to webpack not complete (bundled file references are still wrong in index.html)

--- a/Angular2webapp/Angular2webapp/app/app.component.html
+++ b/Angular2webapp/Angular2webapp/app/app.component.html
@@ -4,13 +4,13 @@
         <p>...</p>
     </div>
     <div class="container">
-        <article>This template holds the TypeScript source code of the <a href="https://angular.io/docs/ts/latest/quickstart.html" target="_blank">angular.io quickstart</a>, for good starting Angular 2 client app with ASP.NET WebApi 2 backend.</article><br />
-        <p>See official Angular.io <a href="https://angular.io/docs/ts/latest/" target="_blank">documentation</a>.</p>
-        <p>See cookbook <a href="https://angular.io/docs/ts/latest/cookbook/visual-studio-2015.html" target="_blank">Visual Studio QuickStart</a>.</p>
-
-        <p>This template <a href="https://github.com/Burgyn/Angular2_web_app1" target="_blank">GitHub repository</a>.</p>
+        <article>
+            This template holds the TypeScript source code of the angular.io quickstart
+        </article>
         <br />
-        <footer><a href="https://twitter.com/MinoMartiniak" target="_blank">Miňo Martiniak</a></footer>
+
+
+      
         <br />
         <br />
         <p>{{timestamp}}</p>
