--- a/Angular2webapp/Angular2webapp/app/app.component.html
+++ b/Angular2webapp/Angular2webapp/app/app.component.html
@@ -1,9 +1,9 @@
 ﻿<div class='container-fluid'>
-    <div class="jumbotron">
-        <h1>Hello {{name}}</h1>
-        <p>...</p>
-    </div>
+    <hpc-header></hpc-header>
     <div class="container">
+        <div class="row">
+            <hpc-actionmenu></hpc-actionmenu>
+        </div>
         <article>
             This template holds the TypeScript source code of the angular.io quickstart
         </article>
