--- a/Angular2webapp/Angular2webapp/app/app.component.html
+++ b/Angular2webapp/Angular2webapp/app/app.component.html
@@ -1,33 +1,16 @@
 ﻿<div class='container-fluid'>
-    <hpc-header></hpc-header>
+    <abc-header></abc-header>
     <div class="container">
         <div class="row">
-            <hpc-actionmenu></hpc-actionmenu>
+            <abc-actionmenu></abc-actionmenu>
         </div>
-        <article>
-            This template holds the TypeScript source code of the angular.io quickstart
-        </article>
-        <br />
+        
+        <div class="row">
+            <router-outlet></router-outlet>
+        </div>
 
-
-      
-        <br />
-        <p *ngIf="!ctrlData"><em>Fetching WebApi...</em></p>
-        <table class='table' *ngIf="ctrlData">
-            <thead>
-                <tr>
-                    <th>Client</th>
-                    <th>Server</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let dummydata of ctrlData">
-                    <td>{{ dummydata.clientData }}</td>
-                    <td>{{ dummydata.serverData }}</td>
-                </tr>
-            </tbody>
-        </table>
-        <br />
-        <p>{{timestamp}}</p>
+        <div class="row">
+            <p>App timestamp: {{timestamp | datex:'HH:mm:ss'}}</p>
+        </div>
     </div>
 </div>
