--- a/Angular2webapp/Angular2webapp/app/core/action-menu/action-menu.component.html
+++ b/Angular2webapp/Angular2webapp/app/core/action-menu/action-menu.component.html
@@ -1,11 +1,17 @@
 ﻿<nav id="autocollapse" class="navbar navbar-default" role="navigation">
     <div class="navbar-header">
-        <a class="navbar-brand" href="#">{{currentHOE}}</a>
+        <p class="navbar-brand">{{menutitle}}</p>
     </div>
     <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">Page 1</a></li>
-        <li><a href="#">Page 2</a></li>
-        <li><a href="#">Page 3</a></li>
+        <li [routerLinkActive]="['link-active']">
+            <a [routerLink]="['/home']">
+                <span class='glyphicon glyphicon-home'></span> Home
+            </a>
+        </li>
+        <li [routerLinkActive]="['link-active']">
+            <a [routerLink]="['/area1']">
+                <span class='glyphicon glyphicon-file'></span> Area1
+            </a>
+        </li>
     </ul>
 </nav>
