Angular routing fixed

--- a/Angular2webapp/Angular2webapp/app/core/action-menu/action-menu.component.html
+++ b/Angular2webapp/Angular2webapp/app/core/action-menu/action-menu.component.html
@@ -3,12 +3,12 @@
         <p class="navbar-brand">{{menutitle}}</p>
     </div>
     <ul class="nav navbar-nav">
-        <li [routerLinkActive]="['link-active']">
+        <li routerLinkActive="active">
             <a [routerLink]="['/home']">
                 <span class='glyphicon glyphicon-home'></span> Home
             </a>
         </li>
-        <li [routerLinkActive]="['link-active']">
+        <li routerLinkActive="active">
             <a [routerLink]="['/area1']">
                 <span class='glyphicon glyphicon-file'></span> Area1
             </a>
