--- a/Angular2webapp/Angular2webapp/app/shared/tree/tree.component.html
+++ b/Angular2webapp/Angular2webapp/app/shared/tree/tree.component.html
@@ -1,6 +1,6 @@
 ﻿<div class="panel panel-default">
     <div class="panel-heading">
-        <h3 class="panel-title">Tree Structure</h3>
+        <h3 class="panel-title">First Shared Component</h3>
     </div>
     <ul class="nav nav-pills nav-stacked">
         <li *ngFor="let element of tree"
