Win authentication + Serverside logging

--- a/Angular2webapp/Angular2webapp/app/home-site/home-site.component.html
+++ b/Angular2webapp/Angular2webapp/app/home-site/home-site.component.html
@@ -1,4 +1,13 @@
-﻿<div>
+﻿<div class="row">
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h3 class="panel-title">User</h3>
+        </div>
+        <p>{{currUser.name}}</p>
+        <p>{{currUser.role}}</p>
+    </div>
+</div>
+<div>
     <h3>{{title}}</h3>
     <p>Component timestamp: {{timestamp | datex:'HH:mm:ss'}}</p>
 </div>
