--- a/Angular2webapp/Angular2webapp/app/area1-site/area1-site.component.html
+++ b/Angular2webapp/Angular2webapp/app/area1-site/area1-site.component.html
@@ -26,3 +26,12 @@
         </div>
     </div>
 </div>
+<div class="panel panel-primary">
+    <div class="panel-heading">
+        Affirmation tests
+    </div>
+    <div class="panel-body">
+        <button (click)="affirm('Something is correct?')">Affirm</button>
+        <button (click)="affirmWCaptcha('U Sure?')">Affirm with Captcha</button>
+    </div>
+</div>
