webpack split + watch mode

--- a/Angular2webapp/Angular2webapp/app/app.component.less
+++ b/Angular2webapp/Angular2webapp/app/app.component.less
@@ -8,7 +8,7 @@
     background-color: @primarycolor;
 
     .class2 {
-        background-color: #fff;
+        background-color: @papercolor;
         color: @primarycolor;
     }
 }
