--- a/Angular2webapp/Angular2webapp/app/area1-site/area1-site.component.html
+++ b/Angular2webapp/Angular2webapp/app/area1-site/area1-site.component.html
@@ -35,3 +35,12 @@
         <button (click)="affirmWCaptcha('U Sure?')">Affirm with Captcha</button>
     </div>
 </div>
+<div class="panel panel-primary">
+    <div class="panel-heading">
+        Pics
+    </div>
+    <div class="panel-body">
+        <img src="{{heroImageUrl}}" />
+        <img src="{{smallImageUrl}}" />
+    </div>
+</div>
