--- a/Angular2webapp/Angular2webapp/app/variables.less
+++ b/Angular2webapp/Angular2webapp/app/variables.less
@@ -1,7 +1,6 @@
-﻿// COLORS
+﻿// ! ! ! Need to recompile Vendor part after some changes here to take effect
+
+// COLORS
 @primarycolor: #2d5e8b;
 @overlaycolor: rgba(0,0,0,0.6);
 @papercolor: rgb(240, 240, 240, 1);
-
-// BOOTSTRAP OVERRIDES
-//@brand-primary: #65ca00;
