Playing with bootstrap/styles

--- a/Angular2webapp/Angular2webapp/app/app.component.html
+++ b/Angular2webapp/Angular2webapp/app/app.component.html
@@ -1,4 +1,7 @@
-﻿<div class='container-fluid maincontent'>
+﻿<div id="siteBG">
+    <span id="leftBGImg"></span>
+</div>
+<div class='container-fluid maincontent'>
     <abc-header></abc-header>
     <div class="container">
         <div class="row">
