--- a/Angular2webapp/Angular2webapp/app/area1-site/area1-site.component.html
+++ b/Angular2webapp/Angular2webapp/app/area1-site/area1-site.component.html
@@ -31,8 +31,8 @@
         Affirmation tests
     </div>
     <div class="panel-body">
-        <button (click)="affirm('Something is correct?')">Affirm</button>
-        <button (click)="affirmWCaptcha('U Sure?')">Affirm with Captcha</button>
+        <button class="btn btn-default" (click)="affirm('Something is correct?')">Affirm</button>
+        <button class="btn btn-primary" (click)="affirmWCaptcha('U Sure?')">Affirm with Captcha</button>
     </div>
 </div>
 <div class="panel panel-primary">
