--- a/Angular2webapp/Angular2webapp/app/variables.less
+++ b/Angular2webapp/Angular2webapp/app/variables.less
@@ -1,6 +1,11 @@
 ﻿// ! ! ! Need to recompile Vendor part after some changes here to take effect
 
 // COLORS
-@primarycolor: #2d5e8b;
+@primarycolor: rgba(45,94,139,1);
+@primarycolortransparent: rgba(45,94,139,1);
 @overlaycolor: rgba(0,0,0,0.6);
-@papercolor: rgb(240, 240, 240, 1);
+@papercolor: rgb(40, 40, 40, 1);
+@papercolortransparent: rgb(40, 40, 40, 0.7);
+
+//IMAGES
+@mainbg: './assets/bgwiesbaden.jpg';
