--- a/Angular2webapp/Angular2webapp/app/core/header/header.component.html
+++ b/Angular2webapp/Angular2webapp/app/core/header/header.component.html
@@ -1,4 +1,4 @@
-﻿<div class="jumbotron">
+﻿<div class="page-header">
     <h1>Hello {{name}} <small>I'm Header Component</small></h1>
     <p>Api.GetVersion: {{version}}</p>
 </div>
