--- a/Angular2webapp/Angular2webapp/app/home-site/home-site.component.html
+++ b/Angular2webapp/Angular2webapp/app/home-site/home-site.component.html
@@ -26,3 +26,15 @@
         </tr>
     </tbody>
 </table>
+
+<div class="panel panel-primary">
+    <div class="panel-heading">
+        Alert tests
+    </div>
+    <div class="panel-body">
+        <button class="btn btn-success" (click)="alertSuccess('Yeah! Thats cool!')">Success</button>
+        <button class="btn btn-info" (click)="alertInfo('Something happend')">Information</button>
+        <button class="btn btn-warning" (click)="alertWarning('Be care... fool!')">Warning</button>
+        <button class="btn btn-danger" (click)="alertError('Its all gone :(')">Error</button>
+    </div>
+</div>
