--- a/Angular2webapp/Angular2webapp/app/app.component.html
+++ b/Angular2webapp/Angular2webapp/app/app.component.html
@@ -5,6 +5,10 @@
     <abc-header></abc-header>
     <div class="container">
         <div class="row">
+            <client-menu></client-menu>
+        </div>
+
+        <div class="row">
             <abc-actionmenu></abc-actionmenu>
         </div>
         
