--- a/Angular2webapp/Angular2webapp/app/core/client-menu/client.component.html
+++ b/Angular2webapp/Angular2webapp/app/core/client-menu/client.component.html
@@ -1,3 +1,7 @@
-﻿<div>
-    <p>{{name}}</p>
+﻿<div class="client" [ngClass]="{'selected': isSelected}" (click)="clientSelected.next(client)">
+    <!--<button (click)="clientSelected.next(client)">-->
+    <p>{{client.shortName}}</p>
+    <!--</button>-->
+
+   
 </div>
