--- a/Angular2webapp/Angular2webapp/app/core/client-menu/client.component.less
+++ b/Angular2webapp/Angular2webapp/app/core/client-menu/client.component.less
@@ -1,2 +1,13 @@
-﻿body {
+﻿@import '../../variables.less';
+
+.client {
+    background: black;
+    width: 60px;
+    height: 60px;
+    margin: 1px;
+    cursor: pointer;
+}
+
+.selected {
+    background: @primarycolortransparent;
 }
