some fixes to webpack (moment locales, angular/forms, sly)

--- a/Angular2webapp/Angular2webapp/app/app.component.html
+++ b/Angular2webapp/Angular2webapp/app/app.component.html
@@ -18,6 +18,17 @@
 
         <div class="row class1">
             <p class="class2">App timestamp: {{timestamp | datex:'HH:mm:ss'}}</p>
+            <p></p>
+            <p class="class2">
+                Moment: {{momenttest}}
+            </p>
+            <p class="class2">
+                Locale: {{momentlocale}}
+            </p>
+            <div>
+                <p>Locales:</p>
+                <p class="class2" *ngFor="let loc of momentlocales">{{loc}}</p>
+            </div>
         </div>
 
                    
