--- a/Angular2webapp/Angular2webapp/app/core/client-menu/client-menu.component.less
+++ b/Angular2webapp/Angular2webapp/app/core/client-menu/client-menu.component.less
@@ -1,27 +1,4 @@
-﻿/*.slyframe {
-    width: 100%;
-    height: 80px;
-    padding: 0;
-
-    .slyslidee {
-        margin: 0;
-        padding: 0;
-        height: 100%;
-        list-style: none;
-        overflow:hidden;
-        display:block;
-        white-space:nowrap;
-
-        li {
-            float: left;
-            margin: 0 5px 0 0;
-            padding: 0;
-        }
-    }
-}*/
-
-
-.slyframe {
+﻿.slyframe {
     width: 100%;
     height: 100px;
     padding: 0;
