--- a/Angular2webapp/Angular2webapp/app/core/alert/alert.component.less
+++ b/Angular2webapp/Angular2webapp/app/core/alert/alert.component.less
@@ -1,22 +1,14 @@
 ﻿@import '../../variables.less';
 
-#overlay {
-    background: @overlaycolor;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    align-content: center;
-}
-
-.centered {
+.alert-panel {
     bottom: 10%;
+    right: 10px;
     position: relative;
     width: 600px;
     margin-left: auto;
-}
 
-.fixed-body {
-    min-height: 200px;
+    .fixed-body {
+        min-height: 200px;
+        padding: 5px;
+    }
 }
