--- a/Angular2webapp/Angular2webapp/app/core/alert/alert.element.component.html
+++ b/Angular2webapp/Angular2webapp/app/core/alert/alert.element.component.html
@@ -1,4 +1,4 @@
-﻿<div class="alert" [ngClass]="'alert'+alertStyle" role="alert">
+﻿<div class="alert groupped-alert" [ngClass]="'alert'+alertStyle" role="alert">
     <div class="row">
         <div class="col-xs-1">
             <strong>{{alert.title}}</strong>
