--- a/Angular2webapp/Angular2webapp/app/variables.less
+++ b/Angular2webapp/Angular2webapp/app/variables.less
@@ -3,6 +3,7 @@
 // COLORS
 @primarycolor: rgba(45,94,139,1);
 @primarycolortransparent: rgba(45,94,139,0.8);
+@accentcolor: rgba(255,180,0,1);
 @overlaycolor: rgba(0,0,0,0.6);
 @papercolor: rgb(40, 40, 40, 1);
 @papercolortransparent: rgb(40, 40, 40, 0.7);
