npm packages updated

--- a/Angular2webapp/Angular2webapp/app/core/client-menu/client.component.html
+++ b/Angular2webapp/Angular2webapp/app/core/client-menu/client.component.html
@@ -1,6 +1,6 @@
 ﻿<div class="client" [ngClass]="{'selected': isSelected}" (click)="clientSelected.next(client)">
     <!--<button (click)="clientSelected.next(client)">-->
-    <p>{{client.shortName}}</p>
+    <p>{{client.ID}}{{client.ShortName}}</p>
     <!--</button>-->
 
    
